Corrected some typos

--- a/src/pages/en/index.mdx
+++ b/src/pages/en/index.mdx
@@ -47,7 +47,7 @@ import IndexLayout from '../../layouts/IndexLayout.astro'
     <Fragment slot="aboutMe">
         👋🏼 Greetings! I'm Ot, a **software developer** established near Barcelona.
 
-        My specialty is **the Front-End of web development**, but
+        My speciality is **the Front-End of web development**, but
         sometimes **I do Back-End stuff** too when needed. I am proactive,
         and I like to learn from new technologies to add value. That is why I
         am currently pursuing a **Bachelor's Degree in Techniques for Software
