Language selector added

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -39,8 +39,8 @@ import IndexLayout from '../layouts/IndexLayout.astro'
             ¿Por qué esta herramienta tubo <span class="text-otrocadev-lightblue">UN IMPACTO REAL</span>?
         </h5>
 
-        Una vez terminado, los ingenieros y tecnicos de la compañia tenia una **solución
-        de software solida** en la que confiar mientras trabajan en el mundo real,
+        Una vez terminado, los ingenieros y técnicos de la compañía tenian una **solución
+        de software sólida** en la que confiar mientras trabajan en el mundo real,
         con situaciones reales.
 
         Con esta flexibilidad, cualquier equipo de software que aparezca mas tarde
@@ -55,8 +55,8 @@ import IndexLayout from '../layouts/IndexLayout.astro'
 
         Mi especialidad es **el desarrollo front-end**, pero a veces **hago cosas de
         back-end** cuando lo necesito. Soy una persona proactiva, y me gusta aprender
-        nuevas tecnologias para aportar valor. Es por ello que actualmente estoy
-        cursando el **Grado en Tecnicas para el desarrollo de Aplicaciones de Software**
+        nuevas tecnologías para aportar valor. Es por ello que actualmente estoy
+        cursando el **Grado en Técnicas para el desarrollo de Aplicaciones de Software**
         en la <a
                     href="https://blogs.uoc.edu/informatica/es/bachelors-degree-in-techniques-for-software-development/"
                     target="_blank"
